clusters/production/apps/paperless-ngx/ingress/paperless-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 10m        # Max upload size is 10MB
spec:
  ingressClassName: nginx
  rules:
    - host: paperless.ndlovucloud.co.zw
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless-svc
                port:
                  number: 8000
